--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,27 +9,26 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [
-          windows-latest,
-          # macos-latest, # cppfront is currently broken on AppleClang
-          ubuntu-latest,
-        ]
+        os: [ windows-2022, ubuntu-24.04]
     runs-on: ${{ matrix.os }}
     steps:
       # System set-up
       - uses: actions/checkout@v3
         with:
           submodules: true
-      - uses: ilammy/msvc-dev-cmd@v1
-      - uses: lukka/get-cmake@latest
 
-      - name: Install GCC 11
+      - uses: lukka/get-cmake@latest
+      
+      - uses: ilammy/msvc-dev-cmd@v1
+        if: startsWith(matrix.os, 'windows')
+        
+      - name: Install GCC 13 and build-essential 
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-11 g++-11
-          echo "CC=gcc-11" >> $GITHUB_ENV
-          echo "CXX=g++-11" >> $GITHUB_ENV
+          sudo apt-get install -y gcc-13 g++-13 build-essential ninja-build
+          echo "CC=gcc-13" >> $GITHUB_ENV
+          echo "CXX=g++-13" >> $GITHUB_ENV
 
       # Main cppfront library
       - name: Configure cppfront
