Add CXX Standard 23 to ci.yml
Added -DCMAKE_CXX_STANDARD=23

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,13 +26,13 @@ jobs:
         if: startsWith(matrix.os, 'ubuntu')
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-13 g++-13 build-essential ninja-build
+          sudo apt-get install -y gcc-13 g++-13 build-essential
           echo "CC=gcc-13" >> $GITHUB_ENV
           echo "CXX=g++-13" >> $GITHUB_ENV
 
       # Main cppfront library
       - name: Configure cppfront
-        run: cmake -G Ninja -S . -B build/cppfront -DCMAKE_BUILD_TYPE=Release
+        run: cmake -G Ninja -S . -B build/cppfront -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=23
       - name: Build cppfront
         run: cmake --build build/cppfront --config Release
       - name: Install cppfront locally
@@ -41,8 +41,7 @@ jobs:
       # Regression tests
       - name: Configure regression tests
         run: >
-          cmake -G Ninja -S regression-tests -B build/regression-tests -DCMAKE_BUILD_TYPE=Release 
-          "-DCMAKE_PREFIX_PATH=${{github.workspace}}/_local"
+          cmake -G Ninja -S regression-tests -B build/regression-tests -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=23 "-DCMAKE_PREFIX_PATH=${{github.workspace}}/_local"
       - name: Build regression tests
         run: cmake --build build/regression-tests --config Release
       - name: Run regression tests
@@ -52,8 +51,7 @@ jobs:
       # Example
       - name: Configure example
         run: >
-          cmake -G Ninja -S example -B build/example -DCMAKE_BUILD_TYPE=Release
-          "-DCMAKE_PREFIX_PATH=${{github.workspace}}/_local"
+          cmake -G Ninja -S example -B build/example -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=23 "-DCMAKE_PREFIX_PATH=${{github.workspace}}/_local"
       - name: Build example
         run: cmake --build build/example --config Release
       - name: Run example
